# adsorption

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md  coverage.ipynb  gcmc.ipynb  pyproject.toml
data/: PengRobinson_fluid_props.csv  atomicmasses.csv  sbmof1-sim-pengrob.json  sbmof1-sim.json  sbmof2-sim-pengrob.json  sbmof2-sim.json  sbmof2-xe-data.csv
data/crystals/: SBMOF-2-modified.cif  SBMOF-2.cif
data/simulations/: muVT_Xe_in_SBMOF-1.cif_298.000K_0.0000000bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0000630bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0002220bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0003980bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0005800bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0008030bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0009850bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0049660bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0099760bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0113640bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0198860bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0199900bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0312500bar_UFF_5000burn_5000sample.jld2  muVT_Xe_in_SBMOF-1.cif_298.000K_0.0397730bar_UFF_5000burn_5000sample.jld2  (+77 more)
paper/: adsorption.bib  paper.out  paper.tex  references.bib
src/: adsorption.jl
