[tool.poetry]
name = "adsorption"
version = "0.1.0"
description = ""
authors = ["Kian Mehrabani <kianmehrabani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<4.0"
requests = "^2.25.1"
matplotlib = "^3.4.1"
pandas = "^1.2.4"
numpy = "^1.20.2"
ipykernel = "^5.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
